@@ -16,11 +16,6 @@ duro::env - manipulate Duro database environments
 <h2>Description</h2>
 
 <dl>
-<dt><b>duro::env create</b> <var>name</var>
-<dd>
-<p>Creates a database environment from directory <var>name</var> and
-returns an environment identifier for that environment.
-
 <dt><b>duro::env open</b> <var>name</var>
 <dd>
 <p>Opens the database environment identified by the directory <var>name</var> and
@@ -28,7 +23,12 @@ returns an environment identifier for that environment.
 
 <dt><b>duro::env close</b> <var>envId</var>
 <dd>
-<p>Closes the environment given by <var>envId</var>.
+<p>Closes the environment specified by <var>envId</var>.
+
+<dt><b>duro::env dbs</b> <var>envId</var>
+<dd>
+<p>Returns a list of all databases in the environment specified
+by <var>envId</var>.
 
 </dl>
 
