@@ -12,7 +12,7 @@ load .libs/libdurotcl.so
 # Create DB environment
 file delete -force tests/dbenv
 file mkdir tests/dbenv
-set dbenv [duro::env create tests/dbenv]
+set dbenv [duro::env open tests/dbenv]
 
 # Create Database
 duro::db create TEST $dbenv
