@@ -15,7 +15,7 @@ source tests/testutil.tcl
 file delete -force tests/dbenv
 file mkdir tests/dbenv
 
-set dbenv [duro::env create tests/dbenv]
+set dbenv [duro::env open tests/dbenv]
 
 # Create Database
 duro::db create TEST $dbenv
